[build-system]
requires = ["setuptools>=61.0","numpy","matplotlib"]
build-backend = "setuptools.build_meta"

[project]
name = "buder_functions"
version = "0.0.2"
authors = [
  { name="Sven Buder", email="sven.buder@anu.edu.au" },
]
description = "Useful functions for/by Sven Buder"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/svenbuder/buder_functions"
"Bug Tracker" = "https://github.com/svenbuder/buder_functions/issues"

